--- a/app/src/main/res/layout/expressorder_detail.xml
+++ b/app/src/main/res/layout/expressorder_detail.xml
@@ -34,6 +34,24 @@
                 </TableRow>
                 <TableRow>
                     <TextView
+                        android:text="头像："
+                        android:id="@+id/TV_userPhoto"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#0000ff"
+                        />
+                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/userPhoto"
+                        android:layout_width="96dp"
+                        android:layout_height="96dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:src="@drawable/damen"
+                        app:civ_border_color="#FF000000"
+                        app:civ_border_width="2dp" />
+                </TableRow>
+                <TableRow>
+                    <TextView
                         android:text="发布人："
                         android:id="@+id/TV_userName"
                         android:layout_width="wrap_content"
@@ -65,14 +83,14 @@
                 <TableRow>
                     <TextView
                         android:text="取货地址："
-                        android:id="@+id/TV_expressCompanyAdress"
+                        android:id="@+id/TV_expressCompanyAddress"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="#0000ff"
                         />
                     <TextView
                         android:text=""
-                        android:id="@+id/expressCompanyAdress"
+                        android:id="@+id/expressCompanyAddress"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         />
@@ -80,14 +98,14 @@
                 <TableRow>
                     <TextView
                         android:text="收货地址："
-                        android:id="@+id/TV_receiveAdress"
+                        android:id="@+id/TV_receiveAddress"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="#0000ff"
                         />
                     <TextView
                         android:text=""
-                        android:id="@+id/receiveAdress"
+                        android:id="@+id/receiveAddress"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         />
@@ -215,17 +233,6 @@
                     android:textColor="@color/white"
                     android:visibility="gone" />
 
-
-                <Button
-                    android:text="返回"
-                    android:id="@+id/btnReturn"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_marginLeft="10dip"
-                    android:layout_marginRight="10dip"
-                    android:layout_marginTop="10dip"
-                    android:background="#1ab394"
-                    android:textColor="@color/white" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
