--- a/app/src/main/res/layout/expresstake_list.xml
+++ b/app/src/main/res/layout/expresstake_list.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/bg"
     android:orientation="vertical" >
-
+    <include layout="@layout/title_list" />
     <TableLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
