--- a/app/src/main/res/layout/more.xml
+++ b/app/src/main/res/layout/more.xml
@@ -15,12 +15,15 @@
             android:layout_height="150dip"
             android:background="#D64F4D" >
 
-            <ImageView
-                android:id="@+id/icon"
-                android:layout_width="80dip"
-                android:layout_height="80dip"
-                android:layout_centerInParent="true"
-                android:src="@drawable/icon" />
+            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/userPhoto"
+                android:layout_width="96dp"
+                android:layout_height="96dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:src="@drawable/damen"
+                app:civ_border_color="#FF000000"
+                app:civ_border_width="2dp" />
 
             <TextView
                 android:id="@+id/username"
