--- a/app/src/main/res/layout/notice_detail.xml
+++ b/app/src/main/res/layout/notice_detail.xml
@@ -17,21 +17,6 @@
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent" 
 		android:stretchColumns="1">
-	    <TableRow> 
-			<TextView 
-				android:text="公告id：" 
-				android:id="@+id/TextView"
-				android:layout_width="wrap_content" 
-				android:layout_height="wrap_content"
-				android:textColor="#0000ff" 
-			/>
-			<TextView
-				android:text="" 
-				android:id="@+id/TV_noticeId" 
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-			/>
-		</TableRow>
 	    <TableRow>
 			<TextView
 				android:text="标题：" 
@@ -42,7 +27,7 @@
 			/>
 			<TextView
 				android:text="" 
-				android:id="@+id/TV_title" 
+				android:id="@+id/TV_noticeTitle"
 				android:layout_width="fill_parent"
 				android:layout_height="wrap_content"
 			/>
@@ -57,7 +42,7 @@
 			/>
 			<TextView
 				android:text="" 
-				android:id="@+id/TV_content" 
+				android:id="@+id/TV_noticeContent"
 				android:layout_width="60dp"
 				android:layout_height="wrap_content"
 				android:inputType="textMultiLine"
@@ -80,23 +65,23 @@
 				android:layout_height="wrap_content"
 			/>
 		</TableRow>
+	<TableRow>
+		<TextView
+			android:text="附件："
+			android:id="@+id/TextView"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textColor="#0000ff"
+			/>
+		<TextView
+			android:text=""
+			android:id="@+id/TV_noticeFile"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			/>
+	</TableRow>
 	</TableLayout>
-	<LinearLayout 
-		android:orientation="vertical" 
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:gravity="center"> 
-		   <Button
-		       android:text="返回"
-		       android:id="@+id/btnReturn"
-		       android:layout_width="match_parent"
-		       android:layout_height="48dp"
-		       android:layout_marginLeft="10dip"
-		       android:layout_marginRight="10dip"
-		       android:layout_marginTop="20dip"
-		       android:background="#1ab394"
-		       android:textColor="@color/white" />
-	</LinearLayout>
+
   </LinearLayout>
 </ScrollView>
 </LinearLayout>
