--- a/app/src/main/res/layout/notice_list_item.xml
+++ b/app/src/main/res/layout/notice_list_item.xml
@@ -13,17 +13,7 @@
             android:layout_marginLeft="10dip"
             android:orientation="vertical" >
             <TextView
-                android:id="@+id/tv_noticeId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="ssss"
-                android:maxEms="18"
-                android:singleLine="true"
-                android:ellipsize="end"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
-            <TextView
-                android:id="@+id/tv_title"
+                android:id="@+id/tv_noticeTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="ssss"
@@ -42,6 +32,8 @@
                 android:ellipsize="end"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
+            android:textSize="16sp" />
+
         </LinearLayout>
     </RelativeLayout>
 </RelativeLayout>
