--- a/app/src/main/res/layout/receiveadress_list_item.xml
+++ b/app/src/main/res/layout/receiveadress_list_item.xml
@@ -13,14 +13,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="收货人姓名"
-        android:layout_below="@id/receiveAdressName"/>
+        android:layout_below="@id/receiveAddressName"
+        />
     <TextView
         android:id="@+id/receivePhone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="收货人电话"
-        android:layout_below="@id/receiveAdressName"
+        android:layout_below="@id/receiveAddressName"
         android:layout_toRightOf="@id/receiveName"
         android:layout_marginLeft="30dp"/>
-
+    <ImageView
+        android:id="@+id/edit"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="180dp"
+        android:layout_toRightOf="@+id/receivePhone"
+        android:src="@drawable/edit"/>
 </RelativeLayout>
