--- a/app/src/main/res/layout/userinfo_edit.xml
+++ b/app/src/main/res/layout/userinfo_edit.xml
@@ -1,392 +1,202 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#F5F5F5"
-    android:orientation="vertical" >
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+	android:background="#F5F5F5"
+	android:orientation="vertical" >
 
-<include layout="@layout/title" />
+	<include layout="@layout/title" />
 
 	<ScrollView
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content">
-
 		<LinearLayout
+			android:orientation="vertical"
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
-			android:background="@android:color/white"
-			android:orientation="vertical">
-
+			android:background="@android:color/white">
 			<TableLayout
 				android:layout_width="fill_parent"
 				android:layout_height="fill_parent"
 				android:stretchColumns="1">
-
 				<TableRow android:layout_marginTop="5dp">
-
 					<TextView
+						android:text="头像："
 						android:id="@+id/TV_userPhoto"
 						android:layout_width="0dp"
 						android:layout_height="wrap_content"
 						android:layout_weight="1.5"
-						android:text="头像："
-						android:textColor="@color/hint_color" />
+						android:textColor="@color/hint_color"/>
+					<de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+						android:id="@+id/userPhoto"
+						android:layout_width="96dp"
+						android:layout_height="96dp"
+						android:layout_alignParentStart="true"
+						android:layout_alignParentTop="true"
+						android:src="@drawable/damen"
 
-					<ImageView
-						android:id="@+id/iv_userPhoto"
-						android:layout_width="100dp"
-						android:layout_height="100dp"
-						android:layout_marginRight="5dp"
-						android:layout_weight="4"
-						android:src="@drawable/noimage"
-						/>
+						app:civ_border_color="#FF000000"
+						app:civ_border_width="2dp" />
 				</TableRow>
-
-				<TableRow android:layout_marginTop="5dp">
-
-					<Button
-						android:id="@+id/btn_userPhoto"
-						android:layout_width="259dp"
-						android:layout_height="40dp"
-                         android:layout_marginLeft="98dp"
-						android:background="@drawable/bt_shape"
-						android:stateListAnimator="@drawable/state_list_animator_z"
-						android:text="拍照"
-						android:textColor="@color/hint_color" />
-				</TableRow>
-
 				<TableRow android:layout_marginTop="8dp">
-
 					<TextView
-						android:id="@+id/TV_user_name_Label"
+						android:text="学号："
+						android:id="@+id/userId"
 						android:layout_width="0dp"
 						android:layout_height="wrap_content"
-						android:layout_weight="1.5"
-						android:text="用户名："
-						android:textColor="@color/hint_color" />
-
+						android:textColor="@color/hint_color"
+						android:layout_weight="1.5"/>
 					<TextView
-						android:id="@+id/TV_user_name"
+						android:text=""
+						android:id="@+id/TV_userId"
 						android:layout_width="0dp"
-						android:layout_height="wrap_content"
 						android:layout_weight="4"
-						android:text="" />
-				</TableRow>
-
-				<TableRow android:layout_marginTop="5dp">
-
-					<TextView
-						android:id="@+id/TV_password"
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:layout_weight="1.5"
-						android:text="登录密码："
-						android:textColor="@color/hint_color" />
-
-					<EditText
-						android:id="@+id/ET_password"
-						android:layout_width="0dp"
 						android:layout_height="40dp"
-						android:layout_marginRight="5dp"
 						android:layout_marginTop="5dip"
-						android:layout_weight="4"
+						android:layout_marginRight="5dp"
 						android:background="@drawable/btn_item_medium_default"
-						android:drawableLeft="@drawable/ic_user_pwd"
+						android:drawableLeft="@drawable/ic_user_info"
 						android:drawablePadding="10dp"
+						android:ellipsize="end"
 						android:gravity="center_vertical"
 						android:paddingLeft="4dp"
-						android:singleLine="true"
-						android:text="" />
+						android:singleLine="true"/>
 				</TableRow>
-
-				<TableRow
-					android:layout_marginTop="5dp"
-					android:visibility="gone">
-
+				<TableRow android:layout_marginTop="8dp">
 					<TextView
-						android:id="@+id/TV_userType"
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:layout_weight="1.5"
-						android:text="用户类型："
-						android:textColor="@color/hint_color" />
-
-					<EditText
-						android:id="@+id/ET_userType"
-						android:layout_width="0dp"
-						android:layout_height="40dp"
-						android:layout_marginRight="5dp"
-						android:layout_marginTop="5dip"
-						android:layout_weight="4"
-						android:background="@drawable/btn_item_medium_default"
-						android:drawableLeft="@drawable/ic_user_pwd"
-						android:drawablePadding="10dp"
-						android:gravity="center_vertical"
-						android:paddingLeft="4dp"
-						android:singleLine="true"
-						android:text="" />
-				</TableRow>
-
-				<TableRow android:layout_marginTop="5dp">
-
-					<TextView
-						android:id="@+id/TV_name"
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:layout_weight="1.5"
 						android:text="姓名："
-						android:textColor="@color/hint_color" />
-
+						android:id="@+id/TV_userName"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:textColor="@color/hint_color"
+						android:layout_weight="1.5"/>
 					<EditText
-						android:id="@+id/ET_name"
+						android:text=""
+						android:id="@+id/ET_userName"
+						android:layout_width="0dp"
+						android:layout_weight="4"
+						android:layout_height="40dp"
+						android:layout_marginTop="5dip"
+						android:layout_marginRight="5dp"
+						android:background="@drawable/btn_item_medium_default"
+						android:drawableLeft="@drawable/ic_user_info"
+						android:drawablePadding="10dp"
+						android:ellipsize="end"
+						android:gravity="center_vertical"
+						android:paddingLeft="4dp"
+						android:singleLine="true"/>
+				</TableRow>
+				<TableRow android:layout_marginTop="5dp">
+					<TextView
+						android:text="密码："
+						android:id="@+id/TV_userPwd"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1.5"
+						android:textColor="@color/hint_color" />
+					<EditText
+						android:text=""
+						android:id="@+id/ET_userPwd"
 						android:layout_width="0dp"
 						android:layout_height="40dp"
-						android:layout_marginRight="5dp"
-						android:layout_marginTop="5dip"
 						android:layout_weight="4"
+						android:layout_marginTop="5dip"
 						android:background="@drawable/btn_item_medium_default"
 						android:drawableLeft="@drawable/ic_user_pwd"
 						android:drawablePadding="10dp"
 						android:gravity="center_vertical"
 						android:paddingLeft="4dp"
-						android:singleLine="true"
-						android:text="" />
+						android:layout_marginRight="5dp"
+						android:singleLine="true" />
 				</TableRow>
 
-				<TableRow android:layout_marginTop="5dp">
 
+				<TableRow android:layout_marginTop="5dp">
 					<TextView
-						android:id="@+id/TV_gender"
+						android:text="手机号码："
+						android:id="@+id/TV_userPhone"
 						android:layout_width="0dp"
 						android:layout_height="wrap_content"
 						android:layout_weight="1.5"
+						android:textColor="@color/hint_color" />
+					<EditText
+						android:text=""
+						android:id="@+id/ET_userPhone"
+						android:layout_width="0dp"
+						android:layout_height="40dp"
+						android:layout_weight="4"
+						android:layout_marginTop="5dip"
+						android:background="@drawable/btn_item_medium_default"
+						android:drawableLeft="@drawable/ic_user_pwd"
+						android:drawablePadding="10dp"
+						android:gravity="center_vertical"
+						android:paddingLeft="4dp"
+						android:layout_marginRight="5dp"
+						android:singleLine="true" />
+				</TableRow>
+
+				<TableRow android:layout_marginTop="5dp">
+					<TextView
 						android:text="性别："
+						android:id="@+id/TV_userGender"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1.5"
 						android:textColor="@color/hint_color" />
-
 					<EditText
-						android:id="@+id/ET_gender"
+						android:text=""
+						android:id="@+id/ET_userGender"
 						android:layout_width="0dp"
 						android:layout_height="40dp"
-						android:layout_marginRight="5dp"
-						android:layout_marginTop="5dip"
 						android:layout_weight="4"
+						android:layout_marginTop="5dip"
 						android:background="@drawable/btn_item_medium_default"
 						android:drawableLeft="@drawable/ic_user_pwd"
 						android:drawablePadding="10dp"
 						android:gravity="center_vertical"
 						android:paddingLeft="4dp"
-						android:singleLine="true"
-						android:text="" />
-				</TableRow>
-
-				<TableRow android:layout_marginTop="5dp">
-
-					<TextView
-						android:id="@+id/TV_birthDate"
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:layout_weight="1.5"
-						android:text="出生日期："
-						android:textColor="@color/hint_color" />
-
-					<DatePicker
-						android:id="@+id/dp_birthDate"
-						android:layout_width="200dp"
-						android:layout_height="wrap_content"
-						android:layout_weight="4"
-
-						/>
-				</TableRow>
-
-
-				<TableRow android:layout_marginTop="5dp">
-
-					<TextView
-						android:id="@+id/TV_telephone"
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:layout_weight="1.5"
-						android:text="联系电话："
-						android:textColor="@color/hint_color" />
-
-					<EditText
-						android:id="@+id/ET_telephone"
-						android:layout_width="0dp"
-						android:layout_height="40dp"
 						android:layout_marginRight="5dp"
-						android:layout_marginTop="5dip"
-						android:layout_weight="4"
-						android:background="@drawable/btn_item_medium_default"
-						android:drawableLeft="@drawable/ic_user_pwd"
-						android:drawablePadding="10dp"
-						android:gravity="center_vertical"
-						android:paddingLeft="4dp"
-						android:singleLine="true"
-						android:text="" />
+						android:singleLine="true" />
 				</TableRow>
 
 				<TableRow android:layout_marginTop="5dp">
-
 					<TextView
-						android:id="@+id/TV_email"
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:layout_weight="1.5"
 						android:text="邮箱："
+						android:id="@+id/TV_userEmail"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1.5"
 						android:textColor="@color/hint_color" />
-
 					<EditText
-						android:id="@+id/ET_email"
+						android:text=""
+						android:id="@+id/ET_userEmail"
 						android:layout_width="0dp"
 						android:layout_height="40dp"
-						android:layout_marginRight="5dp"
-						android:layout_marginTop="5dip"
 						android:layout_weight="4"
+						android:layout_marginTop="5dip"
 						android:background="@drawable/btn_item_medium_default"
 						android:drawableLeft="@drawable/ic_user_pwd"
 						android:drawablePadding="10dp"
 						android:gravity="center_vertical"
 						android:paddingLeft="4dp"
-						android:singleLine="true"
-						android:text="" />
-				</TableRow>
-
-				<TableRow android:layout_marginTop="5dp">
-
-					<TextView
-						android:id="@+id/TV_address"
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:layout_weight="1.5"
-						android:text="家庭地址："
-						android:textColor="@color/hint_color" />
-
-					<EditText
-						android:id="@+id/ET_address"
-						android:layout_width="0dp"
-						android:layout_height="40dp"
 						android:layout_marginRight="5dp"
-						android:layout_marginTop="5dip"
-						android:layout_weight="4"
-						android:background="@drawable/btn_item_medium_default"
-						android:drawableLeft="@drawable/ic_user_pwd"
-						android:drawablePadding="10dp"
-						android:gravity="center_vertical"
-						android:paddingLeft="4dp"
-						android:singleLine="true"
-						android:text="" />
+						android:singleLine="true" />
 				</TableRow>
-
-				<TableRow
-					android:layout_marginTop="5dp"
-					android:visibility="gone">
-
-					<TextView
-						android:id="@+id/TV_authFile_Label"
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:layout_weight="1.5"
-						android:text="认证文件："
-						android:textColor="@color/hint_color" />
-
-					<TextView
-						android:id="@+id/TV_authFile"
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:layout_marginRight="5dp"
-						android:layout_weight="4"
-						android:maxLines="5"
-						android:singleLine="false"
-						android:text="--" />
-				</TableRow>
-
-				<TableRow
-					android:layout_marginTop="5dp"
-					android:visibility="gone">
-
-					<Button
-						android:id="@+id/btn_authFile"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="5dip"
-						android:layout_span="2"
-						android:text="选择文件"
-						android:textColor="@color/hint_color" />
-				</TableRow>
-
-				<TableRow
-					android:layout_marginTop="5dp"
-					android:visibility="gone">
-
-					<TextView
-						android:id="@+id/TV_shenHeState"
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:layout_weight="1.5"
-						android:text="审核状态："
-						android:textColor="@color/hint_color" />
-
-					<EditText
-						android:id="@+id/ET_shenHeState"
-						android:layout_width="0dp"
-						android:layout_height="40dp"
-						android:layout_marginRight="5dp"
-						android:layout_marginTop="5dip"
-						android:layout_weight="4"
-						android:background="@drawable/btn_item_medium_default"
-						android:drawableLeft="@drawable/ic_user_pwd"
-						android:drawablePadding="10dp"
-						android:gravity="center_vertical"
-						android:paddingLeft="4dp"
-						android:singleLine="true"
-						android:text="" />
-				</TableRow>
-
-				<TableRow
-					android:layout_marginTop="5dp"
-					android:visibility="gone">
-
-					<TextView
-						android:id="@+id/TV_regTime"
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:layout_weight="1.5"
-						android:text="注册时间："
-						android:textColor="@color/hint_color" />
-
-					<EditText
-						android:id="@+id/ET_regTime"
-						android:layout_width="0dp"
-						android:layout_height="40dp"
-						android:layout_marginRight="5dp"
-						android:layout_marginTop="5dip"
-						android:layout_weight="4"
-						android:background="@drawable/btn_item_medium_default"
-						android:drawableLeft="@drawable/ic_user_pwd"
-						android:drawablePadding="10dp"
-						android:gravity="center_vertical"
-						android:paddingLeft="4dp"
-						android:singleLine="true"
-						android:text="" />
-				</TableRow>
-
 			</TableLayout>
-
 			<LinearLayout
+				android:orientation="vertical"
 				android:layout_width="fill_parent"
 				android:layout_height="80dp"
-				android:gravity="center"
-				android:orientation="vertical">
-
+				android:gravity="center">
 				<Button
-					android:id="@+id/BtnUpdate"
+					android:text="修改信息"
+					android:id="@+id/btnEdit"
 					android:layout_width="match_parent"
 					android:layout_height="48dp"
 					android:layout_marginLeft="5dip"
 					android:layout_marginRight="5dip"
 					android:layout_marginTop="5dip"
 					android:background="#D64F4D"
-					android:text="更新"
 					android:textColor="@color/white" />
 			</LinearLayout>
 		</LinearLayout>
