--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -103,6 +103,25 @@
                 android:layout_width="fill_parent"
                 android:layout_height="1.0dip" />
             <TextView
+                android:id="@+id/txt_takeOrder"
+                style="@style/TxtTitle"
+                android:textSize="16sp"
+                android:gravity="center_vertical"
+                android:background="@drawable/setting_item_selector"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:layout_marginTop="20dp"
+                android:drawablePadding="10dp"
+                android:drawableLeft="@drawable/icon_me_photo"
+                android:drawableRight="@drawable/right"
+                android:text="我的代取" />
+            <View
+                android:background="@color/black2"
+                android:layout_width="fill_parent"
+                android:layout_height="1.0dip" />
+            <TextView
                 android:id="@+id/txt_auth"
                 style="@style/TxtTitle"
                 android:textSize="16sp"
