--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -80,4 +80,12 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:contentDescription">@string/app_name</item>
     </style>
+    <style name="TextViewProfileToolbarTitle">
+    <item name="android:textStyle">bold</item>
+    <item name="android:layout_gravity">center</item>
+    <item name="android:textSize">@dimen/text_size_profile_toolbar_title</item>
+    <item name="android:layout_width">100dp</item>
+    <item name="android:gravity">center</item>
+    <item name="android:layout_height">match_parent</item>
+    </style>
 </resources>
